objects/LLC_BI__Team_Keys__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__KeyName__c</fullName>
        <description>This field is required. It is manually populated. It is a text field where users and administrators can provide a name for a Team Alert. nCino recommends that Key Names and Template Names be identical.</description>
        <inlineHelpText>Use this key in the MailerTeamKey field for the respective object.</inlineHelpText>
        <label>Key Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RoleName__c</fullName>
        <description>This field is deprecated.  RoleName__c has been replaced with the Team_Key_Role__c object.</description>
        <label>-D Role Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closer</fullName>
                </value>
                <value>
                    <fullName>Credit Analyst / Underwriter</fullName>
                </value>
                <value>
                    <fullName>Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Loan Ops</fullName>
                </value>
                <value>
                    <fullName>Portfolio Manager</fullName>
                </value>
                <value>
                    <fullName>Special Assets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is deprecated.  Role__c has been replaced with the Team_Key_Role__c object.</description>
        <inlineHelpText>This field is deprecated.  Role has been replaced with Team Key Roles.</inlineHelpText>
        <label>-D Role</label>
        <referenceTo>LLC_BI__Role__c</referenceTo>
        <relationshipLabel>-D Team Keys</relationshipLabel>
        <relationshipName>Team_Key</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__TeamObjectName__c</fullName>
        <description>This field is required. It is manually populated. It identifies the object referenced in the Team Alert and workflow rules.</description>
        <inlineHelpText>The API name of the team object to query.</inlineHelpText>
        <label>Team Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__TemplateName__c</fullName>
        <description>This field is required. It is manually populated. It is a text field where users and administrators can provide a name for a Team Alert Template. nCino recommends that Template Names and Key Names be identical.</description>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Team Key</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__TeamObjectName__c</columns>
        <columns>LLC_BI__TemplateName__c</columns>
        <columns>LLC_BI__KeyName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Team Keys Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Key</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>